k8s/infrastructure/monitoring/alloy/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-alloy
  namespace: alloy
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: alloy}}
  ingress:
    - {fromEntities: [host], toPorts: [{ports: [{port: '12345', protocol: TCP}]}]}  # Health probes
    - {fromEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}}], toPorts: [{ports: [{port: '12345', protocol: TCP}]}]}  # Prometheus scrape
  egress:
    - {toEntities: [kube-apiserver]}  # Pod discovery + log streaming via Kubernetes API
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: loki, app.kubernetes.io/name: loki}}], toPorts: [{ports: [{port: '3100', protocol: TCP}]}]}  # Log push
